# NiaAML-API

./: Dockerfile  LICENSE  README.md  database.py  main.py  pyproject.toml  requirements.txt  testscripts.py
.github/workflows/: codeql-analysis.yml  workflow_test.yml
data/: jobs.db  queue.db
objects/: BasicDataReader.py  PipelineJob.py  PipelineOptimizer.py  PipelineResult.py  UploadCsvResult.py
routers/: management.py  pipeline.py
tests/: helper_methods.py  test_management_api.py  test_pipeline_api.py
worker/: PipelineWorker.py
